--- a/css/framewokr.css
+++ b/css/framewokr.css
@@ -1,3 +1,11 @@
+:root {
+  --blue-color: #0075ff;
+  --blue-alt-color: #0d69d5;
+  --orange-color: #f59e0b;
+  --green-color: #22c55e;
+  --red-color: #f44336;
+  --gray-color: #888;
+}
 /* Start Box */
 .d-block {
   display: block;
@@ -7,6 +15,9 @@
 }
 .justify-center {
   justify-content: center;
+}
+.space-between {
+  justify-content: space-between;
 }
 .align-center {
   align-items: center;
@@ -157,6 +168,24 @@
 .c-black {
   color: black;
 }
+.c-grey {
+  color: var(--gray-color);
+}
+.c-red {
+  color: var(--red-color);
+}
+.c-orange {
+  color: var(--orange-color);
+}
+.c-green {
+  color: var(--green-color);
+}
+.c-blue {
+  color: var(--blue-color);
+}
+.c-blue-alt {
+  color: var(--blue-alt-color);
+}
 /* End Color */
 /* Start Positions */
 .p-relative {
@@ -171,7 +200,7 @@
   text-align: center;
 }
 .fs-14 {
-    font-size: 14px;
+  font-size: 14px;
 }
 /* End Fonts */
 /* Border Radius */
@@ -196,6 +225,17 @@
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
+/* Start Border */
+.b-none {
+  border: none;
+}
+.b-1 {
+  border: 1px solid black;
+}
+.b-ccc {
+  border: 1px solid #ccc;
+}
+/* End Border */
 /* Width */
 .w-full {
   width: 100%;
@@ -218,3 +258,10 @@
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
+/* Start Component */
+.between-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+/* End Component */
