--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
   --green-color: #22c55e;
   --red-color: #f44336;
   --gray-color: #888;
-  --main-duration: .3s;
+  --main-duration: 0.3s;
 }
 * {
   box-sizing: border-box;
@@ -20,6 +20,18 @@ ul {
   list-style: none;
   padding: 0;
 }
+::-webkit-scrollbar {
+  width: 15px;
+}
+::-webkit-scrollbar-track {
+  background-color: white;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--blue-color);
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--blue-alt-color);
+}
 html {
   scroll-behavior: smooth;
 }
@@ -28,7 +40,7 @@ body {
 }
 .page {
   background-color: #f1f5f9;
-  min-height: 100vh;
+  min-height: 200vh;
 }
 /* Start Sidebar */
 .sidebar {
@@ -148,5 +160,24 @@ body {
 .head img {
   width: 32px;
   height: 32px;
+}
+.page h1 {
+  margin: 20px 20px 40px;
+}
+.page h1::before,
+.page h1::after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  left: 0;
+  bottom: -10px;
+}
+.page h1::before {
+  background-color: white;
+  width: 120px;
+}
+.page h1::after {
+  background-color: black;
+  width: 40px;
 }
 /* End Content */
