--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/* Start Global Rules */
 :root {
   --blue-color: #0075ff;
   --blue-alt-color: #0d69d5;
@@ -38,9 +39,69 @@ html {
 body {
   font-family: "Open Sans", sans-serif;
 }
+.toggle-checkbox {
+  appearance: none; /* display: none; */
+  -webkit-appearance: none;
+  display: none;
+}
+.toggle-switch {
+  background-color: #ccc;
+  width: 78px;
+  height: 32px;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  position: relative;
+  transition: var(--main-duration);
+  -webkit-transition: var(--main-duration);
+  -moz-transition: var(--main-duration);
+  -ms-transition: var(--main-duration);
+  -o-transition: var(--main-duration);
+  cursor: pointer;
+}
+.toggle-switch::before {
+  content: "\f00d";
+  font-family: var(--fa-style-family-classic);
+  font-weight: 900;
+  background-color: white;
+  color: #aaa;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: var(--main-duration);
+  -webkit-transition: var(--main-duration);
+  -moz-transition: var(--main-duration);
+  -ms-transition: var(--main-duration);
+  -o-transition: var(--main-duration);
+}
+.toggle-checkbox:checked + .toggle-switch {
+  background-color: var(--blue-color);
+}
+.toggle-checkbox:checked + .toggle-switch::before {
+  content: "\f00c";
+  left: 50px;
+  color: var(--blue-color);
+}
+.settings-page :disabled {
+  cursor: no-drop;
+  background-color: #f0f4f8;
+  color: #bbb;
+}
+/* End Global Rules */
 .page {
   background-color: #f1f5f9;
-  min-height: 200vh;
 }
 /* Start Sidebar */
 .sidebar {
@@ -142,6 +203,9 @@ body {
 }
 .head .search input:focus::placeholder {
   opacity: 0;
+}
+.head .icons .notification {
+  cursor: pointer;
 }
 .head .icons .notification:before {
   content: "";
@@ -511,7 +575,7 @@ body {
 }
 /* End Social Media Stats */
 /* Start Projects */
-@media (max-width:767px) {
+@media (max-width: 767px) {
   .projects {
     margin: 10px;
   }
@@ -539,7 +603,7 @@ body {
   background-color: #faf7f7;
 }
 .projects table tbody tr td:last-child {
-  border-right: 1px solid #EEE;
+  border-right: 1px solid #eee;
 }
 .projects table img {
   width: 32px;
@@ -550,10 +614,225 @@ body {
 .projects table img:not(:first-child) {
   margin-left: -20px;
 }
-.projects table tr td .label {
-}
-
 /* End Projects */
+/* Start Settings */
+.settings-page {
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+}
+@media (max-width: 767px) {
+  .settings-page {
+    grid-template-columns: minmax(100px, 1fr);
+    margin: 10px;
+    gap: 10px;
+  }
+}
+.settings-page .close-message {
+  min-height: 150px;
+  resize: none;
+  font-family: "Courier New", Courier, monospace;
+}
+.settings-page .email {
+  display: inline-flex;
+  width: calc(100% - 80px);
+}
+.settings-page .sec-box:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+.settings-page .sec-box .button {
+  transition: var(--main-duration);
+  -webkit-transition: var(--main-duration);
+  -moz-transition: var(--main-duration);
+  -ms-transition: var(--main-duration);
+  -o-transition: var(--main-duration);
+}
+.settings-page .sec-box .button:hover {
+  background-color: var(--blue-alt-color);
+}
+.settings-page .social-boxes .icon,
+.settings-page .social-boxes input {
+  background-color: #f6f6f6;
+}
+.settings-page .social-boxes .icon {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #ddd;
+  border-right: 0;
+  border-radius: 6px 0 0 6px;
+  -webkit-border-radius: 6px 0 0 6px;
+  -moz-border-radius: 6px 0 0 6px;
+  -ms-border-radius: 6px 0 0 6px;
+  -o-border-radius: 6px 0 0 6px;
+  transition: var(--main-duration);
+  -webkit-transition: var(--main-duration);
+  -moz-transition: var(--main-duration);
+  -ms-transition: var(--main-duration);
+  -o-transition: var(--main-duration);
+}
+.settings-page .social-boxes input {
+  border: 1px solid #ddd;
+  border-radius: 0 6px 6px 0;
+  height: 40px;
+  -webkit-border-radius: 0 6px 6px 0;
+  -moz-border-radius: 0 6px 6px 0;
+  -ms-border-radius: 0 6px 6px 0;
+  -o-border-radius: 0 6px 6px 0;
+}
+.settings-page .social-boxes > .twitter:focus-within .icon {
+  color: #1da1f2;
+}
+.settings-page .social-boxes > .facebook:focus-within .icon {
+  color: #1877f2;
+}
+.settings-page .social-boxes > .linkedin:focus-within .icon {
+  color: #0a66c2;
+}
+.settings-page .social-boxes > .youtube:focus-within .icon {
+  color: #ff0000;
+}
+.widgets-control .control input {
+  -webkit-appearance: none;
+  appearance: none;
+}
+.widgets-control .control label {
+  cursor: pointer;
+  padding-left: 30px;
+  position: relative;
+}
+.widgets-control .control label::before,
+.widgets-control .control label::after {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  margin-top: -9px;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  transition: var(--main-duration);
+  -webkit-transition: var(--main-duration);
+  -moz-transition: var(--main-duration);
+  -ms-transition: var(--main-duration);
+  -o-transition: var(--main-duration);
+}
+.widgets-control .control label::before {
+  content: "";
+  width: 14px;
+  height: 14px;
+  border: 2px solid var(--grey-color);
+}
+.widgets-control .control label:hover::before {
+  border-color: var(--blue-alt-color);
+}
+.widgets-control .control label::after {
+  content: "\f00c";
+  font-family: var(--fa-style-family-classic);
+  font-weight: 900;
+  background-color: var(--blue-color);
+  color: white;
+  font-size: 12px;
+  width: 18px;
+  height: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: scale(0) rotate(360deg);
+  -webkit-transform: scale(0) rotate(360deg);
+  -moz-transform: scale(0) rotate(360deg);
+  -ms-transform: scale(0) rotate(360deg);
+  -o-transform: scale(0) rotate(360deg);
+}
+.widgets-control .control input:checked + label::after {
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+}
+.backup-control .time input {
+  -webkit-appearance: none;
+  appearance: none;
+}
+.backup-control .time label {
+  cursor: pointer;
+  padding-left: 30px;
+  position: relative;
+}
+.backup-control .time label::before,
+.backup-control .time label::after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  transition: var(--main-duration);
+  -webkit-transition: var(--main-duration);
+  -moz-transition: var(--main-duration);
+  -ms-transition: var(--main-duration);
+  -o-transition: var(--main-duration);
+}
+.backup-control .time label::before {
+  width: 18px;
+  height: 18px;
+  border: 2px solid var(--grey-color);
+  left: 0;
+  top: 50%;
+  margin-top: -11px;
+}
+.backup-control .time label:hover::before {
+  border-color: var(--blue-alt-color);
+}
+.backup-control .time label::after {
+  background-color: var(--blue-color);
+  width: 12px;
+  height: 12px;
+  left: 5px;
+  top: 50%;
+  transform: translateY(-50%) scale(0);
+  -webkit-transform: translateY(-50%) scale(0);
+  -moz-transform: translateY(-50%) scale(0);
+  -ms-transform: translateY(-50%) scale(0);
+  -o-transform: translateY(-50%) scale(0);
+}
+.backup-control .time input:checked + label::before {
+  border-color: var(--blue-color);
+}
+.backup-control .time input:checked + label::after {
+  transform: translateY(-50%) scale(1);
+  -webkit-transform: translateY(-50%) scale(1);
+  -moz-transform: translateY(-50%) scale(1);
+  -ms-transform: translateY(-50%) scale(1);
+  -o-transform: translateY(-50%) scale(1);
+}
+.backup-control .servers {
+  border-top: 1px solid #EEE;
+}
+@media (max-width:767px) {
+  .backup-control .servers {
+    flex-wrap: wrap;
+  }
+}
+.backup-control .servers input {
+  appearance: none;
+}
+.backup-control .servers .server {
+  border: 2px solid #eee;
+  transition: var(--main-duration);
+  -webkit-transition: var(--main-duration);
+  -moz-transition: var(--main-duration);
+  -ms-transition: var(--main-duration);
+  -o-transition: var(--main-duration);
+}
+.backup-control .servers .server label {
+  cursor: pointer;
+}
+.backup-control .servers input:checked + .server {
+  color: var(--blue-color);
+  border-color: var(--blue-color);
+}
+/* End Settings */
 /* Start Animation */
 @keyframes change-color {
   from {
