--- a/css/main.css
+++ b/css/main.css
@@ -947,6 +947,78 @@ body {
   }
 }
 /* End Profile Page */
+/* Start Projects Page */
+.projects-page {
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+}
+@media (max-width: 767px) {
+  .projects-page {
+    grid-template-columns: minmax(200px, 1fr);
+    gap: 10px;
+    margin: 10px;
+  }
+}
+.projects-page .project .date {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+.projects-page .project h4 {
+  font-weight: normal;
+}
+.projects-page .project .team {
+  min-height: 80px;
+}
+.projects-page .project .team a {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transition: var(--main-duration);
+  -webkit-transition: var(--main-duration);
+  -moz-transition: var(--main-duration);
+  -ms-transition: var(--main-duration);
+  -o-transition: var(--main-duration);
+}
+.projects-page .project .team a:nth-child(2) {
+  left: 25px;
+}
+.projects-page .project .team a:nth-child(3) {
+  left: 50px;
+}
+.projects-page .project .team a:nth-child(4) {
+  left: 75px;
+}
+.projects-page .project .team a:nth-child(5) {
+  left: 100px;
+}
+.projects-page .project .team img {
+  width: 40px;
+  height: 40px;
+  border: 2px solid white;
+}
+.projects-page .project .team a:hover {
+  bottom: 10px;
+  z-index: 100;
+}
+.projects-page .project .skills {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  justify-content: flex-end;
+  gap: 5px;
+}
+.projects-page .project .progress {
+  width: 260px;
+  height: 8px;
+}
+@media (max-width: 767px) {
+  .projects-page .project .skills {
+    justify-content: center;
+  }
+  .projects-page .project .info {
+    gap: 10px;
+  }
+}
+/* End Projects Page */
 /* Start Animation */
 @keyframes change-color {
   from {
