--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@
 }
 * {
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
 }
 *:focus {
   outline: none;
@@ -38,6 +42,7 @@ html {
 }
 body {
   font-family: "Open Sans", sans-serif;
+  margin: 0;
 }
 .toggle-checkbox {
   appearance: none; /* display: none; */
@@ -618,7 +623,7 @@ body {
 /* End Projects */
 /* Start Settings */
 .settings-page {
-  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
 }
 @media (max-width: 767px) {
   .settings-page {
@@ -1019,6 +1024,52 @@ body {
   }
 }
 /* End Projects Page */
+/* Start Courses Page */
+.courses-page {
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
+@media (max-width: 767px) {
+  .courses-page {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 10px;
+    margin: 10px;
+  }
+}
+.courses-page .course {
+  overflow: hidden;
+}
+.courses-page .course .cover {
+  width: 100%;
+  max-width: 100%;
+}
+.courses-page .course .instructor {
+  width: 64px;
+  height: 64px;
+  border: 2px solid white;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+.courses-page .course .course-content .description {
+  line-height: 1.6;
+}
+.courses-page .course .info {
+  border-top: 1px solid #eee;
+  font-size: 13px;
+}
+.courses-page .course .info .title {
+  position: absolute;
+  height: 27px;
+  top: -14px;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  z-index: 10;
+}
+/* End Courses Page */
 /* Start Animation */
 @keyframes change-color {
   from {
