Create Files Page

--- a/css/framework.css
+++ b/css/framework.css
@@ -300,6 +300,9 @@
 .b-ccc {
   border: 1px solid #ccc;
 }
+.b-eee {
+  border: 1px solid #ccc;
+}
 /* End Border */
 /* Start Width + Height */
 .w-full {
